feature(monitoring): Started adding support for the rackspace monitoring api.

--- a/config.dist.json
+++ b/config.dist.json
@@ -4,5 +4,10 @@
     "clientSecret": "secret-client-secret",
     "authCallbackUri": "http://example.com/auth/github/callback"
   },
-  "sessionSecret": "secret change me"
+  "sessionSecret": "secret change me",
+  "rax": {
+    "tenant": "123456",
+    "user": "raxUser",
+    "apiKey": "raxApiKey"
+  }
 }
