--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ejs": "~1.0.0",
     "mongodb": "~1.4.7",
     "mongoose": "~3.8.13",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "pkgcloud": "~0.9.6",
+    "request": "~2.37.0"
   }
 }
