--- a/config.dist.json
+++ b/config.dist.json
@@ -8,6 +8,7 @@
   "rax": {
     "tenant": "123456",
     "user": "raxUser",
-    "apiKey": "raxApiKey"
+    "apiKey": "raxApiKey",
+    "notificationPlan": "npId"
   }
 }
