--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "~3.8.13",
     "async": "~0.9.0",
     "pkgcloud": "~0.9.6",
-    "request": "~2.37.0"
+    "request": "~2.37.0",
+    "JSONStream": "~0.8.4"
   }
 }
