feature(webhook server): Make new webhook server class to keep the logic separate from the main express server.

--- a/config.dist.json
+++ b/config.dist.json
@@ -9,6 +9,11 @@
     "tenant": "123456",
     "user": "raxUser",
     "apiKey": "raxApiKey",
-    "notificationPlan": "npId"
+    "notificationPlan": "npId",
+  },
+  "webhook": {
+    "host": "127.0.0.1",
+    "port": 8484,
+    "token": "webhookToken"
   }
 }
