--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "~0.9.0",
     "pkgcloud": "~0.9.6",
     "request": "~2.37.0",
-    "JSONStream": "~0.8.4"
+    "JSONStream": "~0.8.4",
+    "jade": "~1.4.2"
   }
 }
