--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pkgcloud": "~0.9.6",
     "request": "~2.37.0",
     "JSONStream": "~0.8.4",
-    "jade": "~1.4.2"
+    "jade": "~1.4.2",
+    "mailgun-js": "~0.5.1"
   }
 }
