--- a/config.dist.json
+++ b/config.dist.json
@@ -19,5 +19,10 @@
   "mailgun": {
     "apiKey": "mailgunApiKey",
     "domain": "mail.example.com"
+  },
+  "mongo": {
+    "host": "127.0.0.1",
+    "port": 27017,
+    "db": "downtime"
   }
 }
