--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "~2.37.0",
     "JSONStream": "~0.8.4",
     "jade": "~1.4.2",
-    "mailgun-js": "~0.5.1"
+    "mailgun-js": "~0.5.1",
+    "connect-mongo": "~0.4.1"
   }
 }
